add idea plugin

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 
     // Apply the application plugin to add support for building an application
     id 'application'
-	apply plugin: 'IntellJ IDEA'
+	apply plugin: 'idea'
 }
 
 // Define the main class for the application
